# camerl-release

./: .gitignore  CMakeLists.txt  README.md  avoider_vel_cmd.py  collect_data.py  environment.yaml  package.xml  setup.py  test_ppo.py  train_lstm_without_env.py  train_policy.py  trainvae_ca.py
ca_proc/: generate.py  view_ca_dataset.py
ca_proc/utils/: depthConvert.py
configs/control/: config.yaml  config_lstm.yaml  config_lstm_indoor.yaml  config_new.yaml  config_new_out.yaml
data/: loaders.py
include/: pose.h  ros_pilot.h
include/bridge/: rotors_bridge.hpp
launch/: flying_hummingbird.launch
mav_baselines/torch/common/: util.py
mav_baselines/torch/recurrent_ppo/: __init__.py  policies.py  ppo_recurrent.py
mav_baselines/torch/recurrent_ppo/recurrent/: buffers.py  policies.py  rnn_extractor.py  type_aliases.py
models/: vae.py
parameters/: rotors_hummingbird_pilot.yaml
parameters/quads/: hummingbird.yaml
src/: ctrl_feedback_publisher.cpp  node.cpp  ros_pilot.cpp
src/bridge/: ros_bridge.cpp  rotors_bridge.cpp
utils/: misc.py
